add meta description

--- a/layouts/partials/head-additions.html
+++ b/layouts/partials/head-additions.html
@@ -1,1 +1,3 @@
-<meta name="keywords" content="{{ with .Params.keywords }}{{ delimit . ", "}}{{ end }}" />
+<meta name="description" content="{{ .Description }}">
+<meta name="keywords" content="{{ .Keywords }}">
+
