--- a/layouts/partials/head-additions.html
+++ b/layouts/partials/head-additions.html
@@ -1,3 +1,3 @@
+{{ with .Keywords }}<meta name="keywords" content="{{ range $i, $e := . }}{{ if $i }} {{ end }}{{ $e }}{{ end }}">{{ end }}
 <meta name="description" content="{{ .Description }}">
-<meta name="keywords" content="{{ .Keywords }}">
 
